create simple interface

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,46 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.conteiner{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+#btn-start{
+  padding: 3rem;
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  color: #fff;
+  background: #4141ff;
+}
+
+#btn-start:hover{
+  background: #5858ff;
+  border-radius: 50%;
+}
+
+#btn-start i{
+  font-size: 5rem;
+}
+
+#color-code{
+  padding: 0.8rem 1.2rem;
+  font-size: 1.7rem;
+  background: #ffffff;
+  color: #000;
+  border-radius: 8px;
+}
+
